Revert "fix button on ios"
This reverts commit 18b6b5625eac1a4cd2b7f32b6d669fc06c2ba434.

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -11,7 +11,6 @@ body {
 
 input {
   font-size: 16px;
-  -webkit-appearance: none;
 }
 
 .app {
